tests/syntax/good/instr_bloc1.c

void f() {
{int **y;
{int x;
};
};
}

