tests/syntax/bad/testfile-instr_decl2-1.c
void m() { static int x = 0; }
